package com.ylkget.pattern.structure.bridge.remote.remotes;

/**
 * <p>
 * $
 * </p>
 *
 * @author joe 2021-03-29 17:07
 */
public interface Remote {
    void power();

    void volumeDown();

    void volumeUp();

    void channelDown();

    void channelUp();
}
